--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ matplotlib = "^3.10.3"
 seaborn = "^0.13.2"
 scikit-learn = "^1.7.0"
 jupyter = "^1.1.1"
+ipykernel = "^6.29.5"
 
 
 [build-system]
